# harness_fired_festival

./: .gitignore  PLANNING.md  README.md  app.py  pyproject.toml  run.py
data/: earnings_sample.txt
signalguard/: __init__.py  config.py  orchestrator.py
signalguard/agents/: __init__.py  base.py  claude_agent.py  mock_agent.py
signalguard/alarms/: __init__.py  bus.py  types.py
signalguard/checkpoints/: __init__.py  base.py  registry.py  stages.py
signalguard/guardrails/: __init__.py  base.py  registry.py  rules.py
signalguard/material/: __init__.py  adapters.py  store.py  textnorm.py  types.py
signalguard/observability/: __init__.py  tracing.py
tests/: test_harness.py
web/: index.html
